# Lab_di_progr_Acciai

./: Account.cpp  Account.h  CMakeLists.txt  README.docx  README.md  Transaction.h  User.cpp  User.h  main.cpp
Google_Test/: CMakeLists.txt  TestAccount.cpp  TestTransaction.cpp  TestUser.cpp
Google_Test/googletest-main/googlemock/include/gmock/: gmock-matchers.h
Google_Test/googletest-main/googletest/cmake/: internal_utils.cmake
Google_Test/googletest-main/googletest/include/gtest/internal/: gtest-port.h
